--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Я впервые разместил свой код на удаленнном репозитории</h1>
+  <p>Изменение, которое позже удалю...</p>
 </body>
 </html>
